--- a/frontend/static/scss/partials/_variables.scss
+++ b/frontend/static/scss/partials/_variables.scss
@@ -102,7 +102,7 @@
     --padding-md: 20px;
     
     /* Evaluation Bar Offsets */
-    --eval-offset-desktop: 45px;
+    --eval-offset-desktop: 38px;  /* Reduced from 45px for taller bar */
     --eval-offset-tablet: 55px;
     --eval-offset-mobile: 48px;
     
