--- a/frontend/static/scss/style.scss
+++ b/frontend/static/scss/style.scss
@@ -33,6 +33,7 @@
 /* 9. MODALS & OVERLAYS */
 @import 'partials/modals';
 @import 'partials/settings_modal';
+@import 'partials/board_editor';
 
 /* 10. OPENINGS PAGE */
 @import 'partials/openings';
