feat: add board editor for custom position setup

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -195,6 +195,7 @@
 <script src="{{ url_for('static', filename='js/captured_pieces.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/captured_pieces_integration.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/settings_modal.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/board_editor.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/vision_manager.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
 {% endblock %}
