--- a/frontend/static/scss/partials/_modals.scss
+++ b/frontend/static/scss/partials/_modals.scss
@@ -172,11 +172,18 @@
     color: var(--color-text-light);
 }
 
-.btn-editor-tool.active {
+.btn-editor-tool.active-danger {
     background: rgba(220, 53, 69, 0.15);
     border-color: var(--color-danger);
     color: var(--color-danger);
     box-shadow: 0 0 15px rgba(220, 53, 69, 0.2);
+}
+
+.btn-editor-tool.active-success {
+    background: rgba(76, 175, 80, 0.15);
+    border-color: var(--color-primary);
+    color: var(--color-primary);
+    box-shadow: 0 0 15px rgba(76, 175, 80, 0.2);
 }
 
 .editor-board-wrapper {
