refactor: modularize frontend architecture with BotManager and cleanup scripts

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -176,12 +176,12 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/constants.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/stockfish_manager.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/bot_manager.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/opening_data.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/logic_game.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/timer_manager.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/chat_manager.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/captured_pieces.js') }}" defer></script>
-<script src="{{ url_for('static', filename='js/captured_pieces_integration.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/settings_modal.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/board_editor.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/vision_manager.js') }}" defer></script>
